v1.4.0/_sources/plc-kfe-rix-motion_kfe_rix_motion_summary.rst.txt

Settings
--------

.. list-table::
    :header-rows: 1
    :align: center

    * - Setting
      - Value
      - Description
    * - AMS Net ID
      - 172.21.140.70.1.1
      -
    * - Target IP address
      - 172.21.140.70
      - Based on AMS Net ID by convention
    * - AMS Port
      - 851
      -

.. _kfe_rix_motion_pragmas:

Pragmas
-------

Total pragmas found: 100
Total linter errors: 0



Libraries
---------

.. csv-table::
    :header: Library, Vendor, Default, Version
    :align: center

        LCLS General, SLAC, Unset, 2.4.2
        lcls-twincat-motion, SLAC, Unset, 1.5.1
        lcls2-cc-lib, SLAC, Unset, 1.1.2
        PMPS, SLAC - LCLS, Unset, 2.0.0
        Tc2_Standard, Beckhoff Automation GmbH, Unset, Unset
        Tc2_System, Beckhoff Automation GmbH, Unset, Unset
        Tc3_Module, Beckhoff Automation GmbH, Unset, Unset

Symbols
-------





.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        .TCPADS_MAXUDP_BUFFSIZE, UDINT, 4388704 (32)


Constants
^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Constants.bFPUSupport, BOOL, 643252920 (8)
        Constants.bLittleEndian, BOOL, 643252904 (8)
        Constants.bSimulationMode, BOOL, 643252912 (8)
        Constants.CompilerVersion, VERSION, 660208640 (64)
        Constants.CompilerVersionNumeric, DWORD, 649947744 (32)
        Constants.nPackMode, UINT, 643871216 (16)
        Constants.nRegisterSize, WORD, 643871200 (16)
        Constants.RuntimeVersion, VERSION, 660208576 (64)
        Constants.RuntimeVersionNumeric, DWORD, 644714336 (32)


DefaultGlobals
^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        DefaultGlobals.fTimeStamp, LREAL, 4096128 (64)
        DefaultGlobals.stSys, ST_System, 4096000 (88)


GVL
^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL.fbArbiter, FB_Arbiter, 657182272 (760064)
        GVL.fbFastFaultOutput1, FB_HardwareFFOutput, 657942336 (878912)
        GVL.fbFastFaultOutput1.q_xFastFaultOut, BOOL, 657942600 (8)
        GVL.fbFastFaultOutput2, FB_HardwareFFOutput, 658821248 (878912)
        GVL.fbFastFaultOutput2.q_xFastFaultOut, BOOL, 658821512 (8)
        GVL.nLangId_OnlineMonitoring, DINT, 4388224 (32)


GVL_INTERNAL
^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_INTERNAL.UNINITIALIZED_CLASS_GUID, GUID, 4388576 (128)


GVL_Logger
^^^^^^^^^^

.. raw:: html

   <details>
       <summary>14 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Logger.bTrickleTripped, BOOL, 4096088 (8)
        GVL_Logger.cLogHost, STRING(15), 4096192 (128)
        GVL_Logger.fbRootLogger, FB_LogMessage, 4097216 (81600)
        GVL_Logger.iLogPort, UINT, 4096096 (16)
        GVL_Logger.nGlobAccEvents, UDINT, 4178816 (32)
        GVL_Logger.nLocalTrickleTripThreshold, TIME, 4096416 (32)
        GVL_Logger.nLocalTripThreshold, TIME, 4096384 (32)
        GVL_Logger.nMinTimeViolationAcceptable, INT, 4096112 (16)
        GVL_Logger.nTrickleThreshold, UDINT, 4178848 (32)
        GVL_Logger.nTrickleTripTime, TIME, 4096448 (32)
        GVL_Logger.nTripResetPeriod, TIME, 4096480 (32)
        GVL_Logger.sIpTidbit, STRING(6), 4096320 (56)
        GVL_Logger.sPlcHostname, STRING(80), 4096512 (648)
        GVL_Logger.TCPADS_MAXUDP_BUFFSIZE, UDINT, 4097184 (32)

.. raw:: html

   </details>
   <br />


GVL_Param_TcUnit
^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Param_TcUnit.AdsLogMessageFifoRingBufferSize, UINT, 4393024 (16)
        GVL_Param_TcUnit.LogExtendedResults, BOOL, 4386904 (8)
        GVL_Param_TcUnit.MaxNumberOfAssertsForEachTestSuite, UINT, 4390912 (16)
        GVL_Param_TcUnit.MaxNumberOfTestsForEachTestSuite, UINT, 4390896 (16)
        GVL_Param_TcUnit.MaxNumberOfTestSuites, UINT, 4390880 (16)
        GVL_Param_TcUnit.xUnitBufferSize, UDINT, 4390944 (32)
        GVL_Param_TcUnit.xUnitEnablePublish, BOOL, 4390928 (8)
        GVL_Param_TcUnit.xUnitFilePath, STRING(255), 4390976 (2048)


GVL_TcUnit
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_TcUnit.AdsMessageQueue, FB_AdsLogStringMessageFifoQueue, 626254112 (8320864)
        GVL_TcUnit.CurrentTestIsFinished, BOOL, 4393040 (8)
        GVL_TcUnit.CurrentTestNameBeingCalled, STRING(255), 626220032 (2048)
        GVL_TcUnit.CurrentTestSuiteBeingCalled, POINTER TO FB_TestSuite, 626220000 (32)
        GVL_TcUnit.IgnoreCurrentTest, BOOL, 4393048 (8)
        GVL_TcUnit.NumberOfInitializedTestSuites, UINT, 626222080 (16)
        GVL_TcUnit.TcUnitRunner, FB_TcUnitRunner, 4393056 (621826944)
        GVL_TcUnit.TestSuiteAddresses, POINTER TO FB_TestSuite, 626222112 (32000)
        GVL_TcUnit.TestSuiteIsRegistered, BOOL, 4390936 (8)


Global_Constants
^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Constants.EMPTY_EVENT_CLASS, GUID, 4387840 (128)
        Global_Constants.EMPTY_EVENT_ID, UDINT, 4387968 (32)
        Global_Constants.EMPTY_SEVERITY, TcEventSeverity, 4388000 (16)
        Global_Constants.SUCCESS_EVENT, TcEventEntry, 4388032 (192)


Global_Variables
^^^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>242 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Variables.ADSIGRP_DEVICE_DATA, UDINT, 4181120 (32)
        Global_Variables.ADSIGRP_IOIMAGE_CLEARI, UDINT, 4181024 (32)
        Global_Variables.ADSIGRP_IOIMAGE_CLEARO, UDINT, 4181056 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RISIZE, UDINT, 4180896 (32)
        Global_Variables.ADSIGRP_IOIMAGE_ROSIZE, UDINT, 4180992 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWIB, UDINT, 4180832 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWIOB, UDINT, 4181088 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWIX, UDINT, 4180864 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWOB, UDINT, 4180928 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWOX, UDINT, 4180960 (32)
        Global_Variables.ADSIGRP_SYM_DOWNLOAD, UDINT, 4180704 (32)
        Global_Variables.ADSIGRP_SYM_HNDBYNAME, UDINT, 4180480 (32)
        Global_Variables.ADSIGRP_SYM_INFOBYNAME, UDINT, 4180608 (32)
        Global_Variables.ADSIGRP_SYM_INFOBYNAMEEX, UDINT, 4180672 (32)
        Global_Variables.ADSIGRP_SYM_RELEASEHND, UDINT, 4180576 (32)
        Global_Variables.ADSIGRP_SYM_UPLOAD, UDINT, 4180736 (32)
        Global_Variables.ADSIGRP_SYM_UPLOADINFO, UDINT, 4180768 (32)
        Global_Variables.ADSIGRP_SYM_VALBYHND, UDINT, 4180544 (32)
        Global_Variables.ADSIGRP_SYM_VALBYNAME, UDINT, 4180512 (32)
        Global_Variables.ADSIGRP_SYM_VERSION, UDINT, 4180640 (32)
        Global_Variables.ADSIGRP_SYMNAME, UDINT, 4180416 (32)
        Global_Variables.ADSIGRP_SYMNOTE, UDINT, 4180800 (32)
        Global_Variables.ADSIGRP_SYMTAB, UDINT, 4180384 (32)
        Global_Variables.ADSIGRP_SYMVAL, UDINT, 4180448 (32)
        Global_Variables.ADSIOFFS_DEVDATA_ADSSTATE, UDINT, 4181152 (32)
        Global_Variables.ADSIOFFS_DEVDATA_DEVSTATE, UDINT, 4181184 (32)
        Global_Variables.ADSLOG_MSGTYPE_ERROR, DWORD, 4182240 (32)
        Global_Variables.ADSLOG_MSGTYPE_HINT, DWORD, 4182176 (32)
        Global_Variables.ADSLOG_MSGTYPE_LOG, DWORD, 4182272 (32)
        Global_Variables.ADSLOG_MSGTYPE_MSGBOX, DWORD, 4182304 (32)
        Global_Variables.ADSLOG_MSGTYPE_RESOURCE, DWORD, 4182336 (32)
        Global_Variables.ADSLOG_MSGTYPE_STRING, DWORD, 4182368 (32)
        Global_Variables.ADSLOG_MSGTYPE_WARN, DWORD, 4182208 (32)
        Global_Variables.ADSSTATE_CONFIG, UINT, 4180272 (16)
        Global_Variables.ADSSTATE_ERROR, UINT, 4180208 (16)
        Global_Variables.ADSSTATE_EXCEPTION, UINT, 4180336 (16)
        Global_Variables.ADSSTATE_IDLE, UINT, 4180048 (16)
        Global_Variables.ADSSTATE_INCOMPATIBLE, UINT, 4180320 (16)
        Global_Variables.ADSSTATE_INIT, UINT, 4180080 (16)
        Global_Variables.ADSSTATE_INVALID, UINT, 4180032 (16)
        Global_Variables.ADSSTATE_LOADCFG, UINT, 4180160 (16)
        Global_Variables.ADSSTATE_MAXSTATES, UINT, 4180352 (16)
        Global_Variables.ADSSTATE_POWERFAILURE, UINT, 4180176 (16)
        Global_Variables.ADSSTATE_POWERGOOD, UINT, 4180192 (16)
        Global_Variables.ADSSTATE_RECONFIG, UINT, 4180288 (16)
        Global_Variables.ADSSTATE_RESET, UINT, 4180064 (16)
        Global_Variables.ADSSTATE_RESUME, UINT, 4180256 (16)
        Global_Variables.ADSSTATE_RUN, UINT, 4180112 (16)
        Global_Variables.ADSSTATE_SAVECFG, UINT, 4180144 (16)
        Global_Variables.ADSSTATE_SHUTDOWN, UINT, 4180224 (16)
        Global_Variables.ADSSTATE_START, UINT, 4180096 (16)
        Global_Variables.ADSSTATE_STOP, UINT, 4180128 (16)
        Global_Variables.ADSSTATE_STOPPING, UINT, 4180304 (16)
        Global_Variables.ADSSTATE_SUSPEND, UINT, 4180240 (16)
        Global_Variables.AMSLOGGER_IGR_GENERAL, UDINT, 4247936 (32)
        Global_Variables.AMSLOGGER_IOF_MODE, UDINT, 4247968 (32)
        Global_Variables.AMSPORT_AMSLOGGER, UINT, 4246672 (16)
        Global_Variables.AMSPORT_EVENTLOG, UINT, 4179744 (16)
        Global_Variables.AMSPORT_LOGGER, UINT, 4097168 (16)
        Global_Variables.AMSPORT_R0_CAM, UINT, 4179968 (16)
        Global_Variables.AMSPORT_R0_CAMTOOL, UINT, 4179984 (16)
        Global_Variables.AMSPORT_R0_CNC, UINT, 4179856 (16)
        Global_Variables.AMSPORT_R0_IO, UINT, 4179776 (16)
        Global_Variables.AMSPORT_R0_ISG, UINT, 4179840 (16)
        Global_Variables.AMSPORT_R0_LINE, UINT, 4179872 (16)
        Global_Variables.AMSPORT_R0_NC, UINT, 4179792 (16)
        Global_Variables.AMSPORT_R0_NCSAF, UINT, 4179808 (16)
        Global_Variables.AMSPORT_R0_NCSVB, UINT, 4179824 (16)
        Global_Variables.AMSPORT_R0_PLC, UINT, 4179888 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS1, UINT, 4179904 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS2, UINT, 4179920 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS3, UINT, 4179936 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS4, UINT, 4179952 (16)
        Global_Variables.AMSPORT_R0_RTIME, UINT, 4179760 (16)
        Global_Variables.AMSPORT_R3_SCOPESERVER, UINT, 4180016 (16)
        Global_Variables.AMSPORT_R3_SYSSERV, UINT, 4180000 (16)
        Global_Variables.AMSPORT_TCPIPSRV, UINT, 4388016 (16)
        Global_Variables.BOOTDATAFLAGS_PERSISTENT_INVALID, BYTE, 4182400 (8)
        Global_Variables.BOOTDATAFLAGS_PERSISTENT_LOADED, BYTE, 4180376 (8)
        Global_Variables.BOOTDATAFLAGS_RETAIN_INVALID, BYTE, 4097160 (8)
        Global_Variables.BOOTDATAFLAGS_RETAIN_LOADED, BYTE, 4096376 (8)
        Global_Variables.BOOTDATAFLAGS_RETAIN_REQUESTED, BYTE, 4180368 (8)
        Global_Variables.CONNECT_MODE_ENABLEDBG, DWORD, 4389696 (32)
        Global_Variables.DATE_AND_TIME_SECPERDAY, DWORD, 4260896 (32)
        Global_Variables.DATE_AND_TIME_SECPERWEEK, DWORD, 4260928 (32)
        Global_Variables.DBG_OUTPUT_FILE, DWORD, 4267200 (32)
        Global_Variables.DBG_OUTPUT_LOG, DWORD, 4267168 (32)
        Global_Variables.DBG_OUTPUT_NONE, DWORD, 4267136 (32)
        Global_Variables.DBG_OUTPUT_VISU, DWORD, 4267232 (32)
        Global_Variables.DEFAULT_ADS_TIMEOUT, TIME, 4183072 (32)
        Global_Variables.DEFAULT_BACKLASHVALUE, LREAL, 634601664 (64)
        Global_Variables.DEFAULT_CSV_FIELD_DOUBLE_QUOTE, BYTE, 4384400 (8)
        Global_Variables.DEFAULT_CSV_FIELD_SEP, BYTE, 4184664 (8)
        Global_Variables.DEFAULT_CSV_RECORD_SEP_CR, BYTE, 4384408 (8)
        Global_Variables.DEFAULT_CSV_RECORD_SEP_LF, BYTE, 4384416 (8)
        Global_Variables.DEFAULT_HOME_POSITION, LREAL, 634601600 (64)
        Global_Variables.EMPTY_ARG_VALUE, T_Arg, 4248544 (96)
        Global_Variables.EMPTY_GUID_REGSTRING, STRING(38), 4386568 (312)
        Global_Variables.EMPTY_GUID_STRING, STRING(36), 4386272 (296)
        Global_Variables.EMPTY_GUID_STRUCT, GUID, 4386144 (128)
        Global_Variables.EMPTY_ROUTE_ENTRY, ST_AmsRouteEntry, 4246688 (1184)
        Global_Variables.eWatchdogConfig, E_WATCHDOG_TIME_CONFIG, 4183056 (16)
        Global_Variables.FLOATREC_EXP_IS_INF, INT, 4248032 (16)
        Global_Variables.FLOATREC_EXP_IS_NAN, INT, 4248016 (16)
        Global_Variables.FLOATREC_MAX_DIGITS, INT, 4248048 (16)
        Global_Variables.FLOATREC_MAX_PRECISION, INT, 4248064 (16)
        Global_Variables.FLOATREC_MIN_PRECISION, INT, 4248080 (16)
        Global_Variables.FMTERR_ARGTYPEINVALID, DWORD, 4248384 (32)
        Global_Variables.FMTERR_ASTERISKPOSITION, DWORD, 4248160 (32)
        Global_Variables.FMTERR_DESTBUFFOVERFLOW, DWORD, 4248480 (32)
        Global_Variables.FMTERR_FLAGPOSITION, DWORD, 4248256 (32)
        Global_Variables.FMTERR_INSUFFICIENTARGS, DWORD, 4248448 (32)
        Global_Variables.FMTERR_INVALIDPOINTERINPUT, DWORD, 4248512 (32)
        Global_Variables.FMTERR_NOERROR, DWORD, 4248096 (32)
        Global_Variables.FMTERR_PERCENTSIGNPOSITION, DWORD, 4248128 (32)
        Global_Variables.FMTERR_PRECISIONDOTPOSITION, DWORD, 4248320 (32)
        Global_Variables.FMTERR_PRECISIONVALUE, DWORD, 4248224 (32)
        Global_Variables.FMTERR_TYPEFIELDVALUE, DWORD, 4248352 (32)
        Global_Variables.FMTERR_UNACCEPTEDPARAMETER, DWORD, 4248416 (32)
        Global_Variables.FMTERR_WIDTHPRECISIONVALPOS, DWORD, 4248288 (32)
        Global_Variables.FMTERR_WIDTHVALUE, DWORD, 4248192 (32)
        Global_Variables.FOPEN_MODEAPPEND, DWORD, 4182496 (32)
        Global_Variables.FOPEN_MODEBINARY, DWORD, 4182560 (32)
        Global_Variables.FOPEN_MODEPLUS, DWORD, 4182528 (32)
        Global_Variables.FOPEN_MODEREAD, DWORD, 4182432 (32)
        Global_Variables.FOPEN_MODETEXT, DWORD, 4182592 (32)
        Global_Variables.FOPEN_MODEWRITE, DWORD, 4182464 (32)
        Global_Variables.FORMAT_DECASC_CODES, BYTE, 4248896 (80)
        Global_Variables.FORMAT_HEXASC_CODES, BYTE, 4248640 (256)
        Global_Variables.FORMAT_MAX_ARGS, INT, 4248000 (16)
        Global_Variables.GLOBAL_DCF77_PULSE_SPLIT, TIME, 4184672 (32)
        Global_Variables.GLOBAL_DCF77_SEQUENCE_CHECK, BOOL, 4184656 (8)
        Global_Variables.GLOBAL_FORMAT_HASH_PREFIX_TYPE, E_HashPrefixTypes, 4184624 (16)
        Global_Variables.GLOBAL_SBCS_TABLE, E_SBCSType, 4184640 (16)
        Global_Variables.HKEY_MAX_BINARY_DATA_SIZE, UDINT, 4247904 (32)
        Global_Variables.IPHELPERAPI_ADAPTERSINFO, UDINT, 4246336 (32)
        Global_Variables.IPHELPERAPI_IPADDRBYHOSTNAME, UDINT, 4246368 (32)
        Global_Variables.LISTEN_MODE_CLOSEALL, DWORD, 4389632 (32)
        Global_Variables.LISTEN_MODE_USEOPENED, DWORD, 4389664 (32)
        Global_Variables.MAX_ADAPTER_ADDRESS_LENGTH, UDINT, 4246240 (32)
        Global_Variables.MAX_ADAPTER_DESCRIPTION_LENGTH, UDINT, 4246208 (32)
        Global_Variables.MAX_ADAPTER_NAME_LENGTH, UDINT, 4246176 (32)
        Global_Variables.MAX_AVERAGE_MEASURES, INT, 4184608 (16)
        Global_Variables.MAX_LOCAL_ADAPTERS, UDINT, 4246400 (32)
        Global_Variables.MAX_REMOTE_PCS, INT, 4246528 (16)
        Global_Variables.MAX_ROUTE_ADDR_LEN, BYTE, 4246552 (8)
        Global_Variables.MAX_ROUTE_NAME_LEN, BYTE, 4246544 (8)
        Global_Variables.MAX_ROUTE_TRANSPORT, BYTE, 4246664 (8)
        Global_Variables.MAX_STRING_LENGTH, UDINT, 4183168 (32)
        Global_Variables.MAX_THROTTLE_MODE, DWORD, 4389728 (32)
        Global_Variables.MIN_ROUTE_TRANSPORT, BYTE, 4246656 (8)
        Global_Variables.nWatchdogTime, BYTE, 4182424 (8)
        Global_Variables.PI, LREAL, 4183104 (64)
        Global_Variables.ROUTE_FLAG_DYNAMIC, DWORD, 4246592 (32)
        Global_Variables.ROUTE_FLAG_NOOVERRIDE, DWORD, 4246624 (32)
        Global_Variables.ROUTE_FLAG_TEMPORARY, DWORD, 4246560 (32)
        Global_Variables.SYSTEMSERVICE_ADDREMOTE, UDINT, 4246432 (32)
        Global_Variables.SYSTEMSERVICE_CHANGENETID, UDINT, 4181984 (32)
        Global_Variables.SYSTEMSERVICE_CLOSEHANDLE, UDINT, 4181344 (32)
        Global_Variables.SYSTEMSERVICE_CREATEFILE, UDINT, 4181312 (32)
        Global_Variables.SYSTEMSERVICE_DELREMOTE, UDINT, 4246464 (32)
        Global_Variables.SYSTEMSERVICE_ENUMREMOTE, UDINT, 4246496 (32)
        Global_Variables.SYSTEMSERVICE_FCLOSE, UDINT, 4181408 (32)
        Global_Variables.SYSTEMSERVICE_FDELETE, UDINT, 4181728 (32)
        Global_Variables.SYSTEMSERVICE_FEOF, UDINT, 4181696 (32)
        Global_Variables.SYSTEMSERVICE_FFILEFIND, UDINT, 4247872 (32)
        Global_Variables.SYSTEMSERVICE_FGETS, UDINT, 4181568 (32)
        Global_Variables.SYSTEMSERVICE_FOPEN, UDINT, 4181376 (32)
        Global_Variables.SYSTEMSERVICE_FPRINTF, UDINT, 4181664 (32)
        Global_Variables.SYSTEMSERVICE_FPUTS, UDINT, 4181600 (32)
        Global_Variables.SYSTEMSERVICE_FREAD, UDINT, 4181440 (32)
        Global_Variables.SYSTEMSERVICE_FRENAME, UDINT, 4181760 (32)
        Global_Variables.SYSTEMSERVICE_FSCANF, UDINT, 4181632 (32)
        Global_Variables.SYSTEMSERVICE_FSEEK, UDINT, 4181504 (32)
        Global_Variables.SYSTEMSERVICE_FTELL, UDINT, 4181536 (32)
        Global_Variables.SYSTEMSERVICE_FWRITE, UDINT, 4181472 (32)
        Global_Variables.SYSTEMSERVICE_IPHELPERAPI, UDINT, 4246272 (32)
        Global_Variables.SYSTEMSERVICE_IPHOSTNAME, UDINT, 4246304 (32)
        Global_Variables.SYSTEMSERVICE_MKDIR, UDINT, 4181792 (32)
        Global_Variables.SYSTEMSERVICE_OPENCREATE, UDINT, 4181216 (32)
        Global_Variables.SYSTEMSERVICE_OPENREAD, UDINT, 4181248 (32)
        Global_Variables.SYSTEMSERVICE_OPENWRITE, UDINT, 4181280 (32)
        Global_Variables.SYSTEMSERVICE_REG_HKEYLOCALMACHINE, UDINT, 4181856 (32)
        Global_Variables.SYSTEMSERVICE_RMDIR, UDINT, 4181824 (32)
        Global_Variables.SYSTEMSERVICE_SENDEMAIL, UDINT, 4181888 (32)
        Global_Variables.SYSTEMSERVICE_STARTPROCESS, UDINT, 4181952 (32)
        Global_Variables.SYSTEMSERVICE_TIMESERVICES, UDINT, 4181920 (32)
        Global_Variables.SYSTEMSTATEFLAGS_BSOD, BYTE, 4182408 (8)
        Global_Variables.SYSTEMSTATEFLAGS_RTVIOLATION, BYTE, 4182416 (8)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MAX, T_ULARGE_INTEGER, 4255520 (64)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MAX64, ULINT, 4255872 (64)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MIN, T_ULARGE_INTEGER, 4255456 (64)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MIN64, ULINT, 4255808 (64)
        Global_Variables.SYSTEMTIME_DATEDELTA_OFFSET, DWORD, 4255232 (32)
        Global_Variables.SYSTEMTIME_MAX_MONTHDAYS, WORD, 4254384 (384)
        Global_Variables.SYSTEMTIME_MAX_YEARSDAY, WORD, 4254768 (448)
        Global_Variables.SYSTEMTIME_TICKSPERDAY, T_ULARGE_INTEGER, 4255392 (64)
        Global_Variables.SYSTEMTIME_TICKSPERDAY64, ULINT, 4255744 (64)
        Global_Variables.SYSTEMTIME_TICKSPERMSEC, T_ULARGE_INTEGER, 4255264 (64)
        Global_Variables.SYSTEMTIME_TICKSPERMSEC64, ULINT, 4255616 (64)
        Global_Variables.SYSTEMTIME_TICKSPERSEC, T_ULARGE_INTEGER, 4255328 (64)
        Global_Variables.SYSTEMTIME_TICKSPERSEC64, ULINT, 4255680 (64)
        Global_Variables.TCEVENT_FMTPRGSIZE, INT, 4183040 (16)
        Global_Variables.TCEVENT_SRCNAMESIZE, INT, 4183024 (16)
        Global_Variables.TCEVENTFLAG_AUTOFMTALL, WORD, 4182928 (16)
        Global_Variables.TCEVENTFLAG_FMTSELF, WORD, 4182864 (16)
        Global_Variables.TCEVENTFLAG_LOG, WORD, 4182880 (16)
        Global_Variables.TCEVENTFLAG_MSGBOX, WORD, 4182896 (16)
        Global_Variables.TCEVENTFLAG_PRIOCLASS, WORD, 4182848 (16)
        Global_Variables.TCEVENTFLAG_SRCID, WORD, 4182912 (16)
        Global_Variables.TCEVENTSTATE_CONFIRMED, WORD, 4182992 (16)
        Global_Variables.TCEVENTSTATE_INVALID, WORD, 4182944 (16)
        Global_Variables.TCEVENTSTATE_RESET, WORD, 4182976 (16)
        Global_Variables.TCEVENTSTATE_RESETCON, WORD, 4183008 (16)
        Global_Variables.TCEVENTSTATE_SIGNALED, WORD, 4182960 (16)
        Global_Variables.TcMcGlobal, _TCMCGLOBAL, 634594592 (6976)
        Global_Variables.TCPADS_IGR_ADAPTER_LINKSTATUS, UDINT, 4389024 (32)
        Global_Variables.TCPADS_IGR_CLOSEBYHDL, UDINT, 4388768 (32)
        Global_Variables.TCPADS_IGR_CONLIST, UDINT, 4388736 (32)
        Global_Variables.TCPADS_IGR_MULTICAST_ADDBYHDL, UDINT, 4388960 (32)
        Global_Variables.TCPADS_IGR_MULTICAST_DROPBYHDL, UDINT, 4388992 (32)
        Global_Variables.TCPADS_IGR_PEERBYHDL, UDINT, 4388832 (32)
        Global_Variables.TCPADS_IGR_RECVBYHDL, UDINT, 4388864 (32)
        Global_Variables.TCPADS_IGR_RECVFROMBYHDL, UDINT, 4388896 (32)
        Global_Variables.TCPADS_IGR_SENDBYHDL, UDINT, 4388800 (32)
        Global_Variables.TCPADS_IGR_SENDTOBYHDL, UDINT, 4388928 (32)
        Global_Variables.TCPADS_NULL_HSOCKET, T_HSOCKET, 4389280 (352)
        Global_Variables.TCPADSCONLST_IOF_ACCEPT, UDINT, 4389152 (32)
        Global_Variables.TCPADSCONLST_IOF_CLOSEALL, UDINT, 4389120 (32)
        Global_Variables.TCPADSCONLST_IOF_CONNECT, UDINT, 4389056 (32)
        Global_Variables.TCPADSCONLST_IOF_GETHNDLBYADDR, UDINT, 4389216 (32)
        Global_Variables.TCPADSCONLST_IOF_GETLINKSTATUS, UDINT, 4389248 (32)
        Global_Variables.TCPADSCONLST_IOF_LISTEN, UDINT, 4389088 (32)
        Global_Variables.TCPADSCONLST_IOF_UDPBIND, UDINT, 4389184 (32)
        Global_Variables.THROTTLE_MODE_DEFAULT, T_ThrottleTimes, 4390176 (416)
        Global_Variables.THROTTLE_MODE_OFF, T_ThrottleTimes, 4389760 (416)
        Global_Variables.TIMESERVICE_ADJUSTTIMETORTC, UDINT, 4182112 (32)
        Global_Variables.TIMESERVICE_DATEANDTIME, UDINT, 4182016 (32)
        Global_Variables.TIMESERVICE_RTCTIMEDIFF, UDINT, 4182080 (32)
        Global_Variables.TIMESERVICE_SYSTEMTIMES, UDINT, 4182048 (32)
        Global_Variables.TIMESERVICE_TIMEZONINFORMATION, UDINT, 4182144 (32)
        Global_Variables.WEST_EUROPE_TZI, ST_TimeZoneInformation, 4255936 (864)

.. raw:: html

   </details>
   <br />


Global_Version
^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>13 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Version.stLibVersion_Tc2_EtherCAT, ST_LibVersion, 4178880 (288)
        Global_Version.stLibVersion_Tc2_IoFunctions, ST_LibVersion, 4386976 (288)
        Global_Version.stLibVersion_Tc2_Math, ST_LibVersion, 634601728 (288)
        Global_Version.stLibVersion_Tc2_MC2, ST_LibVersion, 634594304 (288)
        Global_Version.stLibVersion_Tc2_ModbusSrv, ST_LibVersion, 4387264 (288)
        Global_Version.stLibVersion_Tc2_SerialCom, ST_LibVersion, 4387552 (288)
        Global_Version.stLibVersion_Tc2_Standard, ST_LibVersion, 4179168 (288)
        Global_Version.stLibVersion_Tc2_System, ST_LibVersion, 4179456 (288)
        Global_Version.stLibVersion_Tc2_Utilities, ST_LibVersion, 4184320 (288)
        Global_Version.stLibVersion_Tc3_EventLogger, ST_LibVersion, 4388288 (288)
        Global_Version.stLibVersion_Tc3_JsonXml, ST_LibVersion, 4390592 (288)
        Global_Version.stLibVersion_Tc3_Module, ST_LibVersion, 4183712 (288)
        Global_Version.stLibVersion_TcUnit, ST_LibVersion, 634574976 (288)

.. raw:: html

   </details>
   <br />


LCLS_General
^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        LCLS_General.DefaultGlobals.stSys.I_EcatMaster1, AMSNETID, 4096040 (48)


MOTION_GVL
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        MOTION_GVL.MAX_STATES, INT, 626222096 (16)
        MOTION_GVL.stInvalidState, DUT_PositionState, 634578176 (2880)
        MOTION_GVL.stUnknownState, DUT_PositionState, 634575296 (2880)


Main
^^^^

.. raw:: html

   <details>
       <summary>264 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Main.M1, DUT_MotionStage, 659700160 (21184)
        Main.M1.Axis.NcToPlc, NCTOPLC_AXIS_REF, 659701248 (2048)
        Main.M1.Axis.PlcToNc, PLCTONC_AXIS_REF, 659700224 (1024)
        Main.M1.bBrakeRelease, BOOL, 659709208 (8)
        Main.M1.bHardwareEnable, BOOL, 659709216 (8)
        Main.M1.bHome, BOOL, 659709200 (8)
        Main.M1.bLimitBackwardEnable, BOOL, 659709192 (8)
        Main.M1.bLimitForwardEnable, BOOL, 659709184 (8)
        Main.M1.nRawEncoderINT, INT, 659709328 (16)
        Main.M1.nRawEncoderUINT, UINT, 659709312 (16)
        Main.M1.nRawEncoderULINT, ULINT, 659709248 (64)
        Main.M10, DUT_MotionStage, 659890816 (21184)
        Main.M10.Axis.NcToPlc, NCTOPLC_AXIS_REF, 659891904 (2048)
        Main.M10.Axis.PlcToNc, PLCTONC_AXIS_REF, 659890880 (1024)
        Main.M10.bBrakeRelease, BOOL, 659899864 (8)
        Main.M10.bHardwareEnable, BOOL, 659899872 (8)
        Main.M10.bHome, BOOL, 659899856 (8)
        Main.M10.bLimitBackwardEnable, BOOL, 659899848 (8)
        Main.M10.bLimitForwardEnable, BOOL, 659899840 (8)
        Main.M10.nRawEncoderINT, INT, 659899984 (16)
        Main.M10.nRawEncoderUINT, UINT, 659899968 (16)
        Main.M10.nRawEncoderULINT, ULINT, 659899904 (64)
        Main.M11, DUT_MotionStage, 659912000 (21184)
        Main.M11.Axis.NcToPlc, NCTOPLC_AXIS_REF, 659913088 (2048)
        Main.M11.Axis.PlcToNc, PLCTONC_AXIS_REF, 659912064 (1024)
        Main.M11.bBrakeRelease, BOOL, 659921048 (8)
        Main.M11.bHardwareEnable, BOOL, 659921056 (8)
        Main.M11.bHome, BOOL, 659921040 (8)
        Main.M11.bLimitBackwardEnable, BOOL, 659921032 (8)
        Main.M11.bLimitForwardEnable, BOOL, 659921024 (8)
        Main.M11.nRawEncoderINT, INT, 659921168 (16)
        Main.M11.nRawEncoderUINT, UINT, 659921152 (16)
        Main.M11.nRawEncoderULINT, ULINT, 659921088 (64)
        Main.M12, DUT_MotionStage, 659933184 (21184)
        Main.M12.Axis.NcToPlc, NCTOPLC_AXIS_REF, 659934272 (2048)
        Main.M12.Axis.PlcToNc, PLCTONC_AXIS_REF, 659933248 (1024)
        Main.M12.bBrakeRelease, BOOL, 659942232 (8)
        Main.M12.bHardwareEnable, BOOL, 659942240 (8)
        Main.M12.bHome, BOOL, 659942224 (8)
        Main.M12.bLimitBackwardEnable, BOOL, 659942216 (8)
        Main.M12.bLimitForwardEnable, BOOL, 659942208 (8)
        Main.M12.nRawEncoderINT, INT, 659942352 (16)
        Main.M12.nRawEncoderUINT, UINT, 659942336 (16)
        Main.M12.nRawEncoderULINT, ULINT, 659942272 (64)
        Main.M13, DUT_MotionStage, 659954368 (21184)
        Main.M13.Axis.NcToPlc, NCTOPLC_AXIS_REF, 659955456 (2048)
        Main.M13.Axis.PlcToNc, PLCTONC_AXIS_REF, 659954432 (1024)
        Main.M13.bBrakeRelease, BOOL, 659963416 (8)
        Main.M13.bHardwareEnable, BOOL, 659963424 (8)
        Main.M13.bHome, BOOL, 659963408 (8)
        Main.M13.bLimitBackwardEnable, BOOL, 659963400 (8)
        Main.M13.bLimitForwardEnable, BOOL, 659963392 (8)
        Main.M13.nRawEncoderINT, INT, 659963536 (16)
        Main.M13.nRawEncoderUINT, UINT, 659963520 (16)
        Main.M13.nRawEncoderULINT, ULINT, 659963456 (64)
        Main.M14, DUT_MotionStage, 659975552 (21184)
        Main.M14.Axis.NcToPlc, NCTOPLC_AXIS_REF, 659976640 (2048)
        Main.M14.Axis.PlcToNc, PLCTONC_AXIS_REF, 659975616 (1024)
        Main.M14.bBrakeRelease, BOOL, 659984600 (8)
        Main.M14.bHardwareEnable, BOOL, 659984608 (8)
        Main.M14.bHome, BOOL, 659984592 (8)
        Main.M14.bLimitBackwardEnable, BOOL, 659984584 (8)
        Main.M14.bLimitForwardEnable, BOOL, 659984576 (8)
        Main.M14.nRawEncoderINT, INT, 659984720 (16)
        Main.M14.nRawEncoderUINT, UINT, 659984704 (16)
        Main.M14.nRawEncoderULINT, ULINT, 659984640 (64)
        Main.M15, DUT_MotionStage, 659996736 (21184)
        Main.M15.Axis.NcToPlc, NCTOPLC_AXIS_REF, 659997824 (2048)
        Main.M15.Axis.PlcToNc, PLCTONC_AXIS_REF, 659996800 (1024)
        Main.M15.bBrakeRelease, BOOL, 660005784 (8)
        Main.M15.bHardwareEnable, BOOL, 660005792 (8)
        Main.M15.bHome, BOOL, 660005776 (8)
        Main.M15.bLimitBackwardEnable, BOOL, 660005768 (8)
        Main.M15.bLimitForwardEnable, BOOL, 660005760 (8)
        Main.M15.nRawEncoderINT, INT, 660005904 (16)
        Main.M15.nRawEncoderUINT, UINT, 660005888 (16)
        Main.M15.nRawEncoderULINT, ULINT, 660005824 (64)
        Main.M16, DUT_MotionStage, 660017920 (21184)
        Main.M16.Axis.NcToPlc, NCTOPLC_AXIS_REF, 660019008 (2048)
        Main.M16.Axis.PlcToNc, PLCTONC_AXIS_REF, 660017984 (1024)
        Main.M16.bBrakeRelease, BOOL, 660026968 (8)
        Main.M16.bHardwareEnable, BOOL, 660026976 (8)
        Main.M16.bHome, BOOL, 660026960 (8)
        Main.M16.bLimitBackwardEnable, BOOL, 660026952 (8)
        Main.M16.bLimitForwardEnable, BOOL, 660026944 (8)
        Main.M16.nRawEncoderINT, INT, 660027088 (16)
        Main.M16.nRawEncoderUINT, UINT, 660027072 (16)
        Main.M16.nRawEncoderULINT, ULINT, 660027008 (64)
        Main.M17, DUT_MotionStage, 660039104 (21184)
        Main.M17.Axis.NcToPlc, NCTOPLC_AXIS_REF, 660040192 (2048)
        Main.M17.Axis.PlcToNc, PLCTONC_AXIS_REF, 660039168 (1024)
        Main.M17.bBrakeRelease, BOOL, 660048152 (8)
        Main.M17.bHardwareEnable, BOOL, 660048160 (8)
        Main.M17.bHome, BOOL, 660048144 (8)
        Main.M17.bLimitBackwardEnable, BOOL, 660048136 (8)
        Main.M17.bLimitForwardEnable, BOOL, 660048128 (8)
        Main.M17.nRawEncoderINT, INT, 660048272 (16)
        Main.M17.nRawEncoderUINT, UINT, 660048256 (16)
        Main.M17.nRawEncoderULINT, ULINT, 660048192 (64)
        Main.M18, DUT_MotionStage, 660060288 (21184)
        Main.M18.Axis.NcToPlc, NCTOPLC_AXIS_REF, 660061376 (2048)
        Main.M18.Axis.PlcToNc, PLCTONC_AXIS_REF, 660060352 (1024)
        Main.M18.bBrakeRelease, BOOL, 660069336 (8)
        Main.M18.bHardwareEnable, BOOL, 660069344 (8)
        Main.M18.bHome, BOOL, 660069328 (8)
        Main.M18.bLimitBackwardEnable, BOOL, 660069320 (8)
        Main.M18.bLimitForwardEnable, BOOL, 660069312 (8)
        Main.M18.nRawEncoderINT, INT, 660069456 (16)
        Main.M18.nRawEncoderUINT, UINT, 660069440 (16)
        Main.M18.nRawEncoderULINT, ULINT, 660069376 (64)
        Main.M19, DUT_MotionStage, 660081472 (21184)
        Main.M19.Axis.NcToPlc, NCTOPLC_AXIS_REF, 660082560 (2048)
        Main.M19.Axis.PlcToNc, PLCTONC_AXIS_REF, 660081536 (1024)
        Main.M19.bBrakeRelease, BOOL, 660090520 (8)
        Main.M19.bHardwareEnable, BOOL, 660090528 (8)
        Main.M19.bHome, BOOL, 660090512 (8)
        Main.M19.bLimitBackwardEnable, BOOL, 660090504 (8)
        Main.M19.bLimitForwardEnable, BOOL, 660090496 (8)
        Main.M19.nRawEncoderINT, INT, 660090640 (16)
        Main.M19.nRawEncoderUINT, UINT, 660090624 (16)
        Main.M19.nRawEncoderULINT, ULINT, 660090560 (64)
        Main.M2, DUT_MotionStage, 659721344 (21184)
        Main.M2.Axis.NcToPlc, NCTOPLC_AXIS_REF, 659722432 (2048)
        Main.M2.Axis.PlcToNc, PLCTONC_AXIS_REF, 659721408 (1024)
        Main.M2.bBrakeRelease, BOOL, 659730392 (8)
        Main.M2.bHardwareEnable, BOOL, 659730400 (8)
        Main.M2.bHome, BOOL, 659730384 (8)
        Main.M2.bLimitBackwardEnable, BOOL, 659730376 (8)
        Main.M2.bLimitForwardEnable, BOOL, 659730368 (8)
        Main.M2.nRawEncoderINT, INT, 659730512 (16)
        Main.M2.nRawEncoderUINT, UINT, 659730496 (16)
        Main.M2.nRawEncoderULINT, ULINT, 659730432 (64)
        Main.M20, DUT_MotionStage, 660102656 (21184)
        Main.M20.Axis.NcToPlc, NCTOPLC_AXIS_REF, 660103744 (2048)
        Main.M20.Axis.PlcToNc, PLCTONC_AXIS_REF, 660102720 (1024)
        Main.M20.bBrakeRelease, BOOL, 660111704 (8)
        Main.M20.bHardwareEnable, BOOL, 660111712 (8)
        Main.M20.bHome, BOOL, 660111696 (8)
        Main.M20.bLimitBackwardEnable, BOOL, 660111688 (8)
        Main.M20.bLimitForwardEnable, BOOL, 660111680 (8)
        Main.M20.nRawEncoderINT, INT, 660111824 (16)
        Main.M20.nRawEncoderUINT, UINT, 660111808 (16)
        Main.M20.nRawEncoderULINT, ULINT, 660111744 (64)
        Main.M21, DUT_MotionStage, 660123840 (21184)
        Main.M21.Axis.NcToPlc, NCTOPLC_AXIS_REF, 660124928 (2048)
        Main.M21.Axis.PlcToNc, PLCTONC_AXIS_REF, 660123904 (1024)
        Main.M21.bBrakeRelease, BOOL, 660132888 (8)
        Main.M21.bHardwareEnable, BOOL, 660132896 (8)
        Main.M21.bHome, BOOL, 660132880 (8)
        Main.M21.bLimitBackwardEnable, BOOL, 660132872 (8)
        Main.M21.bLimitForwardEnable, BOOL, 660132864 (8)
        Main.M21.nRawEncoderINT, INT, 660133008 (16)
        Main.M21.nRawEncoderUINT, UINT, 660132992 (16)
        Main.M21.nRawEncoderULINT, ULINT, 660132928 (64)
        Main.M22, DUT_MotionStage, 660145024 (21184)
        Main.M22.Axis.NcToPlc, NCTOPLC_AXIS_REF, 660146112 (2048)
        Main.M22.Axis.PlcToNc, PLCTONC_AXIS_REF, 660145088 (1024)
        Main.M22.bBrakeRelease, BOOL, 660154072 (8)
        Main.M22.bHardwareEnable, BOOL, 660154080 (8)
        Main.M22.bHome, BOOL, 660154064 (8)
        Main.M22.bLimitBackwardEnable, BOOL, 660154056 (8)
        Main.M22.bLimitForwardEnable, BOOL, 660154048 (8)
        Main.M22.nRawEncoderINT, INT, 660154192 (16)
        Main.M22.nRawEncoderUINT, UINT, 660154176 (16)
        Main.M22.nRawEncoderULINT, ULINT, 660154112 (64)
        Main.M23, DUT_MotionStage, 660166208 (21184)
        Main.M23.Axis.NcToPlc, NCTOPLC_AXIS_REF, 660167296 (2048)
        Main.M23.Axis.PlcToNc, PLCTONC_AXIS_REF, 660166272 (1024)
        Main.M23.bBrakeRelease, BOOL, 660175256 (8)
        Main.M23.bHardwareEnable, BOOL, 660175264 (8)
        Main.M23.bHome, BOOL, 660175248 (8)
        Main.M23.bLimitBackwardEnable, BOOL, 660175240 (8)
        Main.M23.bLimitForwardEnable, BOOL, 660175232 (8)
        Main.M23.nRawEncoderINT, INT, 660175376 (16)
        Main.M23.nRawEncoderUINT, UINT, 660175360 (16)
        Main.M23.nRawEncoderULINT, ULINT, 660175296 (64)
        Main.M24, DUT_MotionStage, 660187392 (21184)
        Main.M24.Axis.NcToPlc, NCTOPLC_AXIS_REF, 660188480 (2048)
        Main.M24.Axis.PlcToNc, PLCTONC_AXIS_REF, 660187456 (1024)
        Main.M24.bBrakeRelease, BOOL, 660196440 (8)
        Main.M24.bHardwareEnable, BOOL, 660196448 (8)
        Main.M24.bHome, BOOL, 660196432 (8)
        Main.M24.bLimitBackwardEnable, BOOL, 660196424 (8)
        Main.M24.bLimitForwardEnable, BOOL, 660196416 (8)
        Main.M24.nRawEncoderINT, INT, 660196560 (16)
        Main.M24.nRawEncoderUINT, UINT, 660196544 (16)
        Main.M24.nRawEncoderULINT, ULINT, 660196480 (64)
        Main.M3, DUT_MotionStage, 659742528 (21184)
        Main.M3.Axis.NcToPlc, NCTOPLC_AXIS_REF, 659743616 (2048)
        Main.M3.Axis.PlcToNc, PLCTONC_AXIS_REF, 659742592 (1024)
        Main.M3.bBrakeRelease, BOOL, 659751576 (8)
        Main.M3.bHardwareEnable, BOOL, 659751584 (8)
        Main.M3.bHome, BOOL, 659751568 (8)
        Main.M3.bLimitBackwardEnable, BOOL, 659751560 (8)
        Main.M3.bLimitForwardEnable, BOOL, 659751552 (8)
        Main.M3.nRawEncoderINT, INT, 659751696 (16)
        Main.M3.nRawEncoderUINT, UINT, 659751680 (16)
        Main.M3.nRawEncoderULINT, ULINT, 659751616 (64)
        Main.M4, DUT_MotionStage, 659763712 (21184)
        Main.M4.Axis.NcToPlc, NCTOPLC_AXIS_REF, 659764800 (2048)
        Main.M4.Axis.PlcToNc, PLCTONC_AXIS_REF, 659763776 (1024)
        Main.M4.bBrakeRelease, BOOL, 659772760 (8)
        Main.M4.bHardwareEnable, BOOL, 659772768 (8)
        Main.M4.bHome, BOOL, 659772752 (8)
        Main.M4.bLimitBackwardEnable, BOOL, 659772744 (8)
        Main.M4.bLimitForwardEnable, BOOL, 659772736 (8)
        Main.M4.nRawEncoderINT, INT, 659772880 (16)
        Main.M4.nRawEncoderUINT, UINT, 659772864 (16)
        Main.M4.nRawEncoderULINT, ULINT, 659772800 (64)
        Main.M5, DUT_MotionStage, 659784896 (21184)
        Main.M5.Axis.NcToPlc, NCTOPLC_AXIS_REF, 659785984 (2048)
        Main.M5.Axis.PlcToNc, PLCTONC_AXIS_REF, 659784960 (1024)
        Main.M5.bBrakeRelease, BOOL, 659793944 (8)
        Main.M5.bHardwareEnable, BOOL, 659793952 (8)
        Main.M5.bHome, BOOL, 659793936 (8)
        Main.M5.bLimitBackwardEnable, BOOL, 659793928 (8)
        Main.M5.bLimitForwardEnable, BOOL, 659793920 (8)
        Main.M5.nRawEncoderINT, INT, 659794064 (16)
        Main.M5.nRawEncoderUINT, UINT, 659794048 (16)
        Main.M5.nRawEncoderULINT, ULINT, 659793984 (64)
        Main.M6, DUT_MotionStage, 659806080 (21184)
        Main.M6.Axis.NcToPlc, NCTOPLC_AXIS_REF, 659807168 (2048)
        Main.M6.Axis.PlcToNc, PLCTONC_AXIS_REF, 659806144 (1024)
        Main.M6.bBrakeRelease, BOOL, 659815128 (8)
        Main.M6.bHardwareEnable, BOOL, 659815136 (8)
        Main.M6.bHome, BOOL, 659815120 (8)
        Main.M6.bLimitBackwardEnable, BOOL, 659815112 (8)
        Main.M6.bLimitForwardEnable, BOOL, 659815104 (8)
        Main.M6.nRawEncoderINT, INT, 659815248 (16)
        Main.M6.nRawEncoderUINT, UINT, 659815232 (16)
        Main.M6.nRawEncoderULINT, ULINT, 659815168 (64)
        Main.M7, DUT_MotionStage, 659827264 (21184)
        Main.M7.Axis.NcToPlc, NCTOPLC_AXIS_REF, 659828352 (2048)
        Main.M7.Axis.PlcToNc, PLCTONC_AXIS_REF, 659827328 (1024)
        Main.M7.bBrakeRelease, BOOL, 659836312 (8)
        Main.M7.bHardwareEnable, BOOL, 659836320 (8)
        Main.M7.bHome, BOOL, 659836304 (8)
        Main.M7.bLimitBackwardEnable, BOOL, 659836296 (8)
        Main.M7.bLimitForwardEnable, BOOL, 659836288 (8)
        Main.M7.nRawEncoderINT, INT, 659836432 (16)
        Main.M7.nRawEncoderUINT, UINT, 659836416 (16)
        Main.M7.nRawEncoderULINT, ULINT, 659836352 (64)
        Main.M8, DUT_MotionStage, 659848448 (21184)
        Main.M8.Axis.NcToPlc, NCTOPLC_AXIS_REF, 659849536 (2048)
        Main.M8.Axis.PlcToNc, PLCTONC_AXIS_REF, 659848512 (1024)
        Main.M8.bBrakeRelease, BOOL, 659857496 (8)
        Main.M8.bHardwareEnable, BOOL, 659857504 (8)
        Main.M8.bHome, BOOL, 659857488 (8)
        Main.M8.bLimitBackwardEnable, BOOL, 659857480 (8)
        Main.M8.bLimitForwardEnable, BOOL, 659857472 (8)
        Main.M8.nRawEncoderINT, INT, 659857616 (16)
        Main.M8.nRawEncoderUINT, UINT, 659857600 (16)
        Main.M8.nRawEncoderULINT, ULINT, 659857536 (64)
        Main.M9, DUT_MotionStage, 659869632 (21184)
        Main.M9.Axis.NcToPlc, NCTOPLC_AXIS_REF, 659870720 (2048)
        Main.M9.Axis.PlcToNc, PLCTONC_AXIS_REF, 659869696 (1024)
        Main.M9.bBrakeRelease, BOOL, 659878680 (8)
        Main.M9.bHardwareEnable, BOOL, 659878688 (8)
        Main.M9.bHome, BOOL, 659878672 (8)
        Main.M9.bLimitBackwardEnable, BOOL, 659878664 (8)
        Main.M9.bLimitForwardEnable, BOOL, 659878656 (8)
        Main.M9.nRawEncoderINT, INT, 659878800 (16)
        Main.M9.nRawEncoderUINT, UINT, 659878784 (16)
        Main.M9.nRawEncoderULINT, ULINT, 659878720 (64)

.. raw:: html

   </details>
   <br />


PMPS_GVL
^^^^^^^^

.. raw:: html

   <details>
       <summary>23 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PMPS_GVL.AccumulatedFF, UDINT, 3072032 (32)
        PMPS_GVL.AUX_ATTENUATORS, UINT, 634590816 (16)
        PMPS_GVL.cnMaxStateArrayLen, INT, 634585712 (16)
        PMPS_GVL.cst0RateBeam, ST_BeamParams, 634587424 (1696)
        PMPS_GVL.cstFullBeam, ST_BeamParams, 634585728 (1696)
        PMPS_GVL.cstSafeBeam, ST_BeamParams, 634589120 (1696)
        PMPS_GVL.DUMMY_AUX_ATT_ARRAY, ST_PMPS_Attenuator, 634590848 (1024)
        PMPS_GVL.EXCLUDED_ASSERTION_ID, UDINT, 634585472 (32)
        PMPS_GVL.FAST_TEST_VELOCITY, LREAL, 634585600 (64)
        PMPS_GVL.g_areVBoundaries, REAL, 634584448 (1024)
        PMPS_GVL.g_areVBoundariesK, REAL, 634592960 (1024)
        PMPS_GVL.g_areVBoundariesL, REAL, 634591936 (1024)
        PMPS_GVL.g_cBoundaries, INT, 634591872 (16)
        PMPS_GVL.MAX_APERTURES, UINT, 634590832 (16)
        PMPS_GVL.MAX_DEVICE_STATES, UDINT, 634585504 (32)
        PMPS_GVL.MAX_VETO_DEVICES, UINT, 634585696 (16)
        PMPS_GVL.PERange, PE_Ranges, 634575264 (32)
        PMPS_GVL.reVHyst, REAL, 634591904 (32)
        PMPS_GVL.stCurrentBeamParameters, ST_BeamParams, 634582752 (1696)
        PMPS_GVL.stRequestedBeamParameters, ST_BeamParams, 634581056 (1696)
        PMPS_GVL.SuccessfulPreemption, UDINT, 3072000 (32)
        PMPS_GVL.TRANS_SCALING_FACTOR, REAL, 634585664 (32)
        PMPS_GVL.VISIBLE_TEST_VELOCITY, LREAL, 634585536 (64)

.. raw:: html

   </details>
   <br />


PMPS_PARAM
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PMPS_PARAM.MAX_ASSERTIONS, UDINT, 634593984 (32)
        PMPS_PARAM.MAX_FAST_FAULTS, UINT, 634591888 (16)
        PMPS_PARAM.TRANS_MARGIN, REAL, 634594016 (32)


PMPS_TOOLS
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PMPS_TOOLS.fbJson, FB_JsonSaxWriter, 634594048 (256)


PRG_1_PlcTask
^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_1_PlcTask.bDebug, BOOL, 634629184 (8)


PRG_3_PMPS_POST
^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_3_PMPS_POST.bMR1K1_Veto, BOOL, 634640040 (8)
        PRG_3_PMPS_POST.bST1K2_Veto, BOOL, 634640048 (8)
        PRG_3_PMPS_POST.bST1K2_Veto_Override, BOOL, 634640056 (8)
        PRG_3_PMPS_POST.fbArbiterIO, FB_SubSysToArbiter_IO, 651251968 (138176)
        PRG_3_PMPS_POST.fbArbiterIO.i_stCurrentBP, ST_BeamParams_IO, 651252768 (1696)
        PRG_3_PMPS_POST.fbArbiterIO.q_stRequestedBP, ST_BeamParams_IO, 651254464 (1696)
        PRG_3_PMPS_POST.fbArbiterIO.xTxPDO_state, BIT, 651256161 (1)
        PRG_3_PMPS_POST.fbArbiterIO.xTxPDO_toggle, BIT, 651256160 (1)


PRG_4_LOG
^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_4_LOG.fbLogHandler, FB_LogHandler, 651393536 (5785856)


PRG_AL1K2_L2SI
^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_AL1K2_L2SI.fbAL1K2, FB_REF, 638223744 (603904)
        PRG_AL1K2_L2SI.fbAL1K2.fbLaser.fbGetLasPercent.iRaw, INT, 638826528 (16)
        PRG_AL1K2_L2SI.fbAL1K2.fbLaser.fbSetLasPercent.iRaw, INT, 638827264 (16)
        PRG_AL1K2_L2SI.fbAL1K2.fbLaser.iLaserINT, INT, 638826448 (16)
        PRG_AL1K2_L2SI.fbAL1K2.fbLaser.iShutdownINT, INT, 638826432 (16)
        PRG_AL1K2_L2SI.fbAL1K2.fbYStage.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 638232192 (2048)
        PRG_AL1K2_L2SI.fbAL1K2.fbYStage.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 638231168 (1024)


PRG_AT2K2_SOLID
^^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>47 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_AT2K2_SOLID.bDebug, BOOL, 634629192 (8)
        PRG_AT2K2_SOLID.DEFAULT_VELOCITY, LREAL, 648486720 (64)
        PRG_AT2K2_SOLID.fbStage1, FB_SXR_SATT_Stage, 646750272 (434112)
        PRG_AT2K2_SOLID.fbStage1.fbMotion.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 646779008 (2048)
        PRG_AT2K2_SOLID.fbStage1.fbMotion.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 646777984 (1024)
        PRG_AT2K2_SOLID.fbStage1.fbRTD_1.bError, BOOL, 647158984 (8)
        PRG_AT2K2_SOLID.fbStage1.fbRTD_1.bOverrange, BOOL, 647159000 (8)
        PRG_AT2K2_SOLID.fbStage1.fbRTD_1.bUnderrange, BOOL, 647158992 (8)
        PRG_AT2K2_SOLID.fbStage1.fbRTD_1.iRaw, INT, 647159008 (16)
        PRG_AT2K2_SOLID.fbStage1.fbRTD_2.bError, BOOL, 647159240 (8)
        PRG_AT2K2_SOLID.fbStage1.fbRTD_2.bOverrange, BOOL, 647159256 (8)
        PRG_AT2K2_SOLID.fbStage1.fbRTD_2.bUnderrange, BOOL, 647159248 (8)
        PRG_AT2K2_SOLID.fbStage1.fbRTD_2.iRaw, INT, 647159264 (16)
        PRG_AT2K2_SOLID.fbStage2, FB_SXR_SATT_Stage, 647184384 (434112)
        PRG_AT2K2_SOLID.fbStage2.fbMotion.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 647213120 (2048)
        PRG_AT2K2_SOLID.fbStage2.fbMotion.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 647212096 (1024)
        PRG_AT2K2_SOLID.fbStage2.fbRTD_1.bError, BOOL, 647593096 (8)
        PRG_AT2K2_SOLID.fbStage2.fbRTD_1.bOverrange, BOOL, 647593112 (8)
        PRG_AT2K2_SOLID.fbStage2.fbRTD_1.bUnderrange, BOOL, 647593104 (8)
        PRG_AT2K2_SOLID.fbStage2.fbRTD_1.iRaw, INT, 647593120 (16)
        PRG_AT2K2_SOLID.fbStage2.fbRTD_2.bError, BOOL, 647593352 (8)
        PRG_AT2K2_SOLID.fbStage2.fbRTD_2.bOverrange, BOOL, 647593368 (8)
        PRG_AT2K2_SOLID.fbStage2.fbRTD_2.bUnderrange, BOOL, 647593360 (8)
        PRG_AT2K2_SOLID.fbStage2.fbRTD_2.iRaw, INT, 647593376 (16)
        PRG_AT2K2_SOLID.fbStage3, FB_SXR_SATT_Stage, 647618496 (434112)
        PRG_AT2K2_SOLID.fbStage3.fbMotion.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 647647232 (2048)
        PRG_AT2K2_SOLID.fbStage3.fbMotion.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 647646208 (1024)
        PRG_AT2K2_SOLID.fbStage3.fbRTD_1.bError, BOOL, 648027208 (8)
        PRG_AT2K2_SOLID.fbStage3.fbRTD_1.bOverrange, BOOL, 648027224 (8)
        PRG_AT2K2_SOLID.fbStage3.fbRTD_1.bUnderrange, BOOL, 648027216 (8)
        PRG_AT2K2_SOLID.fbStage3.fbRTD_1.iRaw, INT, 648027232 (16)
        PRG_AT2K2_SOLID.fbStage3.fbRTD_2.bError, BOOL, 648027464 (8)
        PRG_AT2K2_SOLID.fbStage3.fbRTD_2.bOverrange, BOOL, 648027480 (8)
        PRG_AT2K2_SOLID.fbStage3.fbRTD_2.bUnderrange, BOOL, 648027472 (8)
        PRG_AT2K2_SOLID.fbStage3.fbRTD_2.iRaw, INT, 648027488 (16)
        PRG_AT2K2_SOLID.fbStage4, FB_SXR_SATT_Stage, 648052608 (434112)
        PRG_AT2K2_SOLID.fbStage4.fbMotion.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 648081344 (2048)
        PRG_AT2K2_SOLID.fbStage4.fbMotion.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 648080320 (1024)
        PRG_AT2K2_SOLID.fbStage4.fbRTD_1.bError, BOOL, 648461320 (8)
        PRG_AT2K2_SOLID.fbStage4.fbRTD_1.bOverrange, BOOL, 648461336 (8)
        PRG_AT2K2_SOLID.fbStage4.fbRTD_1.bUnderrange, BOOL, 648461328 (8)
        PRG_AT2K2_SOLID.fbStage4.fbRTD_1.iRaw, INT, 648461344 (16)
        PRG_AT2K2_SOLID.fbStage4.fbRTD_2.bError, BOOL, 648461576 (8)
        PRG_AT2K2_SOLID.fbStage4.fbRTD_2.bOverrange, BOOL, 648461592 (8)
        PRG_AT2K2_SOLID.fbStage4.fbRTD_2.bUnderrange, BOOL, 648461584 (8)
        PRG_AT2K2_SOLID.fbStage4.fbRTD_2.iRaw, INT, 648461600 (16)
        PRG_AT2K2_SOLID.nEnableMode, ENUM_StageEnableMode, 634629200 (16)

.. raw:: html

   </details>
   <br />


PRG_IM1K1_PPM
^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>18 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_IM1K1_PPM.fbIM1K1, FB_PPM, 634640064 (1194368)
        PRG_IM1K1_PPM.fbIM1K1.fbFlowMeter.fRaw, INT, 635834144 (16)
        PRG_IM1K1_PPM.fbIM1K1.fbGige.bGigePower, BOOL, 635833072 (8)
        PRG_IM1K1_PPM.fbIM1K1.fbGige.fbGetIllPercent.iRaw, INT, 635833184 (16)
        PRG_IM1K1_PPM.fbIM1K1.fbGige.fbSetIllPercent.iRaw, INT, 635833920 (16)
        PRG_IM1K1_PPM.fbIM1K1.fbGige.iIlluminatorINT, INT, 635833056 (16)
        PRG_IM1K1_PPM.fbIM1K1.fbPowerMeter.fbGetPMVoltage.iRaw, INT, 635447200 (16)
        PRG_IM1K1_PPM.fbIM1K1.fbPowerMeter.fbThermoCouple.bError, BOOL, 635446920 (8)
        PRG_IM1K1_PPM.fbIM1K1.fbPowerMeter.fbThermoCouple.bOverrange, BOOL, 635446936 (8)
        PRG_IM1K1_PPM.fbIM1K1.fbPowerMeter.fbThermoCouple.bUnderrange, BOOL, 635446928 (8)
        PRG_IM1K1_PPM.fbIM1K1.fbPowerMeter.fbThermoCouple.iRaw, INT, 635446944 (16)
        PRG_IM1K1_PPM.fbIM1K1.fbPowerMeter.iVoltageINT, INT, 635254560 (16)
        PRG_IM1K1_PPM.fbIM1K1.fbYagThermoCouple.bError, BOOL, 635834376 (8)
        PRG_IM1K1_PPM.fbIM1K1.fbYagThermoCouple.bOverrange, BOOL, 635834392 (8)
        PRG_IM1K1_PPM.fbIM1K1.fbYagThermoCouple.bUnderrange, BOOL, 635834384 (8)
        PRG_IM1K1_PPM.fbIM1K1.fbYagThermoCouple.iRaw, INT, 635834400 (16)
        PRG_IM1K1_PPM.fbIM1K1.fbYStage.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 634654272 (2048)
        PRG_IM1K1_PPM.fbIM1K1.fbYStage.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 634653248 (1024)

.. raw:: html

   </details>
   <br />


PRG_IM1K2_PPM
^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>18 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_IM1K2_PPM.fbIM1K2, FB_PPM, 637028800 (1194368)
        PRG_IM1K2_PPM.fbIM1K2.fbFlowMeter.fRaw, INT, 638222880 (16)
        PRG_IM1K2_PPM.fbIM1K2.fbGige.bGigePower, BOOL, 638221808 (8)
        PRG_IM1K2_PPM.fbIM1K2.fbGige.fbGetIllPercent.iRaw, INT, 638221920 (16)
        PRG_IM1K2_PPM.fbIM1K2.fbGige.fbSetIllPercent.iRaw, INT, 638222656 (16)
        PRG_IM1K2_PPM.fbIM1K2.fbGige.iIlluminatorINT, INT, 638221792 (16)
        PRG_IM1K2_PPM.fbIM1K2.fbPowerMeter.fbGetPMVoltage.iRaw, INT, 637835936 (16)
        PRG_IM1K2_PPM.fbIM1K2.fbPowerMeter.fbThermoCouple.bError, BOOL, 637835656 (8)
        PRG_IM1K2_PPM.fbIM1K2.fbPowerMeter.fbThermoCouple.bOverrange, BOOL, 637835672 (8)
        PRG_IM1K2_PPM.fbIM1K2.fbPowerMeter.fbThermoCouple.bUnderrange, BOOL, 637835664 (8)
        PRG_IM1K2_PPM.fbIM1K2.fbPowerMeter.fbThermoCouple.iRaw, INT, 637835680 (16)
        PRG_IM1K2_PPM.fbIM1K2.fbPowerMeter.iVoltageINT, INT, 637643296 (16)
        PRG_IM1K2_PPM.fbIM1K2.fbYagThermoCouple.bError, BOOL, 638223112 (8)
        PRG_IM1K2_PPM.fbIM1K2.fbYagThermoCouple.bOverrange, BOOL, 638223128 (8)
        PRG_IM1K2_PPM.fbIM1K2.fbYagThermoCouple.bUnderrange, BOOL, 638223120 (8)
        PRG_IM1K2_PPM.fbIM1K2.fbYagThermoCouple.iRaw, INT, 638223136 (16)
        PRG_IM1K2_PPM.fbIM1K2.fbYStage.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 637043008 (2048)
        PRG_IM1K2_PPM.fbIM1K2.fbYStage.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 637041984 (1024)

.. raw:: html

   </details>
   <br />


PRG_IM2K1_PPM
^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>18 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_IM2K1_PPM.fbIM2K1, FB_PPM, 635834432 (1194368)
        PRG_IM2K1_PPM.fbIM2K1.fbFlowMeter.fRaw, INT, 637028512 (16)
        PRG_IM2K1_PPM.fbIM2K1.fbGige.bGigePower, BOOL, 637027440 (8)
        PRG_IM2K1_PPM.fbIM2K1.fbGige.fbGetIllPercent.iRaw, INT, 637027552 (16)
        PRG_IM2K1_PPM.fbIM2K1.fbGige.fbSetIllPercent.iRaw, INT, 637028288 (16)
        PRG_IM2K1_PPM.fbIM2K1.fbGige.iIlluminatorINT, INT, 637027424 (16)
        PRG_IM2K1_PPM.fbIM2K1.fbPowerMeter.fbGetPMVoltage.iRaw, INT, 636641568 (16)
        PRG_IM2K1_PPM.fbIM2K1.fbPowerMeter.fbThermoCouple.bError, BOOL, 636641288 (8)
        PRG_IM2K1_PPM.fbIM2K1.fbPowerMeter.fbThermoCouple.bOverrange, BOOL, 636641304 (8)
        PRG_IM2K1_PPM.fbIM2K1.fbPowerMeter.fbThermoCouple.bUnderrange, BOOL, 636641296 (8)
        PRG_IM2K1_PPM.fbIM2K1.fbPowerMeter.fbThermoCouple.iRaw, INT, 636641312 (16)
        PRG_IM2K1_PPM.fbIM2K1.fbPowerMeter.iVoltageINT, INT, 636448928 (16)
        PRG_IM2K1_PPM.fbIM2K1.fbYagThermoCouple.bError, BOOL, 637028744 (8)
        PRG_IM2K1_PPM.fbIM2K1.fbYagThermoCouple.bOverrange, BOOL, 637028760 (8)
        PRG_IM2K1_PPM.fbIM2K1.fbYagThermoCouple.bUnderrange, BOOL, 637028752 (8)
        PRG_IM2K1_PPM.fbIM2K1.fbYagThermoCouple.iRaw, INT, 637028768 (16)
        PRG_IM2K1_PPM.fbIM2K1.fbYStage.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 635848640 (2048)
        PRG_IM2K1_PPM.fbIM2K1.fbYStage.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 635847616 (1024)

.. raw:: html

   </details>
   <br />


PRG_IM2K2_PPM
^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>18 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_IM2K2_PPM.fbIM2K2, FB_PPM, 638827648 (1194368)
        PRG_IM2K2_PPM.fbIM2K2.fbFlowMeter.fRaw, INT, 640021728 (16)
        PRG_IM2K2_PPM.fbIM2K2.fbGige.bGigePower, BOOL, 640020656 (8)
        PRG_IM2K2_PPM.fbIM2K2.fbGige.fbGetIllPercent.iRaw, INT, 640020768 (16)
        PRG_IM2K2_PPM.fbIM2K2.fbGige.fbSetIllPercent.iRaw, INT, 640021504 (16)
        PRG_IM2K2_PPM.fbIM2K2.fbGige.iIlluminatorINT, INT, 640020640 (16)
        PRG_IM2K2_PPM.fbIM2K2.fbPowerMeter.fbGetPMVoltage.iRaw, INT, 639634784 (16)
        PRG_IM2K2_PPM.fbIM2K2.fbPowerMeter.fbThermoCouple.bError, BOOL, 639634504 (8)
        PRG_IM2K2_PPM.fbIM2K2.fbPowerMeter.fbThermoCouple.bOverrange, BOOL, 639634520 (8)
        PRG_IM2K2_PPM.fbIM2K2.fbPowerMeter.fbThermoCouple.bUnderrange, BOOL, 639634512 (8)
        PRG_IM2K2_PPM.fbIM2K2.fbPowerMeter.fbThermoCouple.iRaw, INT, 639634528 (16)
        PRG_IM2K2_PPM.fbIM2K2.fbPowerMeter.iVoltageINT, INT, 639442144 (16)
        PRG_IM2K2_PPM.fbIM2K2.fbYagThermoCouple.bError, BOOL, 640021960 (8)
        PRG_IM2K2_PPM.fbIM2K2.fbYagThermoCouple.bOverrange, BOOL, 640021976 (8)
        PRG_IM2K2_PPM.fbIM2K2.fbYagThermoCouple.bUnderrange, BOOL, 640021968 (8)
        PRG_IM2K2_PPM.fbIM2K2.fbYagThermoCouple.iRaw, INT, 640021984 (16)
        PRG_IM2K2_PPM.fbIM2K2.fbYStage.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 638841856 (2048)
        PRG_IM2K2_PPM.fbIM2K2.fbYStage.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 638840832 (1024)

.. raw:: html

   </details>
   <br />


PRG_IM3K2_PPM
^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>18 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_IM3K2_PPM.fbIM3K2, FB_PPM, 640022016 (1194368)
        PRG_IM3K2_PPM.fbIM3K2.fbFlowMeter.fRaw, INT, 641216096 (16)
        PRG_IM3K2_PPM.fbIM3K2.fbGige.bGigePower, BOOL, 641215024 (8)
        PRG_IM3K2_PPM.fbIM3K2.fbGige.fbGetIllPercent.iRaw, INT, 641215136 (16)
        PRG_IM3K2_PPM.fbIM3K2.fbGige.fbSetIllPercent.iRaw, INT, 641215872 (16)
        PRG_IM3K2_PPM.fbIM3K2.fbGige.iIlluminatorINT, INT, 641215008 (16)
        PRG_IM3K2_PPM.fbIM3K2.fbPowerMeter.fbGetPMVoltage.iRaw, INT, 640829152 (16)
        PRG_IM3K2_PPM.fbIM3K2.fbPowerMeter.fbThermoCouple.bError, BOOL, 640828872 (8)
        PRG_IM3K2_PPM.fbIM3K2.fbPowerMeter.fbThermoCouple.bOverrange, BOOL, 640828888 (8)
        PRG_IM3K2_PPM.fbIM3K2.fbPowerMeter.fbThermoCouple.bUnderrange, BOOL, 640828880 (8)
        PRG_IM3K2_PPM.fbIM3K2.fbPowerMeter.fbThermoCouple.iRaw, INT, 640828896 (16)
        PRG_IM3K2_PPM.fbIM3K2.fbPowerMeter.iVoltageINT, INT, 640636512 (16)
        PRG_IM3K2_PPM.fbIM3K2.fbYagThermoCouple.bError, BOOL, 641216328 (8)
        PRG_IM3K2_PPM.fbIM3K2.fbYagThermoCouple.bOverrange, BOOL, 641216344 (8)
        PRG_IM3K2_PPM.fbIM3K2.fbYagThermoCouple.bUnderrange, BOOL, 641216336 (8)
        PRG_IM3K2_PPM.fbIM3K2.fbYagThermoCouple.iRaw, INT, 641216352 (16)
        PRG_IM3K2_PPM.fbIM3K2.fbYStage.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 640036224 (2048)
        PRG_IM3K2_PPM.fbIM3K2.fbYStage.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 640035200 (1024)

.. raw:: html

   </details>
   <br />


PRG_IM4K2_PPM
^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>18 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_IM4K2_PPM.fbIM4K2, FB_PPM, 641216384 (1194368)
        PRG_IM4K2_PPM.fbIM4K2.fbFlowMeter.fRaw, INT, 642410464 (16)
        PRG_IM4K2_PPM.fbIM4K2.fbGige.bGigePower, BOOL, 642409392 (8)
        PRG_IM4K2_PPM.fbIM4K2.fbGige.fbGetIllPercent.iRaw, INT, 642409504 (16)
        PRG_IM4K2_PPM.fbIM4K2.fbGige.fbSetIllPercent.iRaw, INT, 642410240 (16)
        PRG_IM4K2_PPM.fbIM4K2.fbGige.iIlluminatorINT, INT, 642409376 (16)
        PRG_IM4K2_PPM.fbIM4K2.fbPowerMeter.fbGetPMVoltage.iRaw, INT, 642023520 (16)
        PRG_IM4K2_PPM.fbIM4K2.fbPowerMeter.fbThermoCouple.bError, BOOL, 642023240 (8)
        PRG_IM4K2_PPM.fbIM4K2.fbPowerMeter.fbThermoCouple.bOverrange, BOOL, 642023256 (8)
        PRG_IM4K2_PPM.fbIM4K2.fbPowerMeter.fbThermoCouple.bUnderrange, BOOL, 642023248 (8)
        PRG_IM4K2_PPM.fbIM4K2.fbPowerMeter.fbThermoCouple.iRaw, INT, 642023264 (16)
        PRG_IM4K2_PPM.fbIM4K2.fbPowerMeter.iVoltageINT, INT, 641830880 (16)
        PRG_IM4K2_PPM.fbIM4K2.fbYagThermoCouple.bError, BOOL, 642410696 (8)
        PRG_IM4K2_PPM.fbIM4K2.fbYagThermoCouple.bOverrange, BOOL, 642410712 (8)
        PRG_IM4K2_PPM.fbIM4K2.fbYagThermoCouple.bUnderrange, BOOL, 642410704 (8)
        PRG_IM4K2_PPM.fbIM4K2.fbYagThermoCouple.iRaw, INT, 642410720 (16)
        PRG_IM4K2_PPM.fbIM4K2.fbYStage.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 641230592 (2048)
        PRG_IM4K2_PPM.fbIM4K2.fbYStage.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 641229568 (1024)

.. raw:: html

   </details>
   <br />


PRG_IM5K2_PPM
^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>18 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_IM5K2_PPM.fbIM5K2, FB_PPM, 644714368 (1194368)
        PRG_IM5K2_PPM.fbIM5K2.fbFlowMeter.fRaw, INT, 645908448 (16)
        PRG_IM5K2_PPM.fbIM5K2.fbGige.bGigePower, BOOL, 645907376 (8)
        PRG_IM5K2_PPM.fbIM5K2.fbGige.fbGetIllPercent.iRaw, INT, 645907488 (16)
        PRG_IM5K2_PPM.fbIM5K2.fbGige.fbSetIllPercent.iRaw, INT, 645908224 (16)
        PRG_IM5K2_PPM.fbIM5K2.fbGige.iIlluminatorINT, INT, 645907360 (16)
        PRG_IM5K2_PPM.fbIM5K2.fbPowerMeter.fbGetPMVoltage.iRaw, INT, 645521504 (16)
        PRG_IM5K2_PPM.fbIM5K2.fbPowerMeter.fbThermoCouple.bError, BOOL, 645521224 (8)
        PRG_IM5K2_PPM.fbIM5K2.fbPowerMeter.fbThermoCouple.bOverrange, BOOL, 645521240 (8)
        PRG_IM5K2_PPM.fbIM5K2.fbPowerMeter.fbThermoCouple.bUnderrange, BOOL, 645521232 (8)
        PRG_IM5K2_PPM.fbIM5K2.fbPowerMeter.fbThermoCouple.iRaw, INT, 645521248 (16)
        PRG_IM5K2_PPM.fbIM5K2.fbPowerMeter.iVoltageINT, INT, 645328864 (16)
        PRG_IM5K2_PPM.fbIM5K2.fbYagThermoCouple.bError, BOOL, 645908680 (8)
        PRG_IM5K2_PPM.fbIM5K2.fbYagThermoCouple.bOverrange, BOOL, 645908696 (8)
        PRG_IM5K2_PPM.fbIM5K2.fbYagThermoCouple.bUnderrange, BOOL, 645908688 (8)
        PRG_IM5K2_PPM.fbIM5K2.fbYagThermoCouple.iRaw, INT, 645908704 (16)
        PRG_IM5K2_PPM.fbIM5K2.fbYStage.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 644728576 (2048)
        PRG_IM5K2_PPM.fbIM5K2.fbYStage.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 644727552 (1024)

.. raw:: html

   </details>
   <br />


PRG_IM6K2_PPM
^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>18 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_IM6K2_PPM.fbIM6K2, FB_PPM, 649947776 (1194368)
        PRG_IM6K2_PPM.fbIM6K2.fbFlowMeter.fRaw, INT, 651141856 (16)
        PRG_IM6K2_PPM.fbIM6K2.fbGige.bGigePower, BOOL, 651140784 (8)
        PRG_IM6K2_PPM.fbIM6K2.fbGige.fbGetIllPercent.iRaw, INT, 651140896 (16)
        PRG_IM6K2_PPM.fbIM6K2.fbGige.fbSetIllPercent.iRaw, INT, 651141632 (16)
        PRG_IM6K2_PPM.fbIM6K2.fbGige.iIlluminatorINT, INT, 651140768 (16)
        PRG_IM6K2_PPM.fbIM6K2.fbPowerMeter.fbGetPMVoltage.iRaw, INT, 650754912 (16)
        PRG_IM6K2_PPM.fbIM6K2.fbPowerMeter.fbThermoCouple.bError, BOOL, 650754632 (8)
        PRG_IM6K2_PPM.fbIM6K2.fbPowerMeter.fbThermoCouple.bOverrange, BOOL, 650754648 (8)
        PRG_IM6K2_PPM.fbIM6K2.fbPowerMeter.fbThermoCouple.bUnderrange, BOOL, 650754640 (8)
        PRG_IM6K2_PPM.fbIM6K2.fbPowerMeter.fbThermoCouple.iRaw, INT, 650754656 (16)
        PRG_IM6K2_PPM.fbIM6K2.fbPowerMeter.iVoltageINT, INT, 650562272 (16)
        PRG_IM6K2_PPM.fbIM6K2.fbYagThermoCouple.bError, BOOL, 651142088 (8)
        PRG_IM6K2_PPM.fbIM6K2.fbYagThermoCouple.bOverrange, BOOL, 651142104 (8)
        PRG_IM6K2_PPM.fbIM6K2.fbYagThermoCouple.bUnderrange, BOOL, 651142096 (8)
        PRG_IM6K2_PPM.fbIM6K2.fbYagThermoCouple.iRaw, INT, 651142112 (16)
        PRG_IM6K2_PPM.fbIM6K2.fbYStage.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 649961984 (2048)
        PRG_IM6K2_PPM.fbIM6K2.fbYStage.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 649960960 (1024)

.. raw:: html

   </details>
   <br />


PRG_LI2K2_K2A
^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_LI2K2_K2A.fbLI2K2, FB_LIC, 643252928 (614464)
        PRG_LI2K2_K2A.fbLI2K2.fbYStage.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 643267136 (2048)
        PRG_LI2K2_K2A.fbLI2K2.fbYStage.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 643266112 (1024)
        PRG_LI2K2_K2A.stFoilBP, ST_BeamParams, 643869088 (1696)
        PRG_LI2K2_K2A.stSiBP, ST_BeamParams, 643867392 (1696)


PRG_LI3K2_K2B
^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_LI3K2_K2B.fbLI3K2, FB_LIC, 648486784 (614464)
        PRG_LI3K2_K2B.fbLI3K2.fbYStage.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 648500992 (2048)
        PRG_LI3K2_K2B.fbLI3K2.fbYStage.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 648499968 (1024)
        PRG_LI3K2_K2B.stFoilBP, ST_BeamParams, 649102944 (1696)
        PRG_LI3K2_K2B.stSiBP, ST_BeamParams, 649101248 (1696)


PRG_PF1K2_WFS
^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>14 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_PF1K2_WFS.fbPF1K2, FB_WFS, 643871232 (841408)
        PRG_PF1K2_WFS.fbPF1K2.fbThermoCouple1.bError, BOOL, 644712328 (8)
        PRG_PF1K2_WFS.fbPF1K2.fbThermoCouple1.bOverrange, BOOL, 644712344 (8)
        PRG_PF1K2_WFS.fbPF1K2.fbThermoCouple1.bUnderrange, BOOL, 644712336 (8)
        PRG_PF1K2_WFS.fbPF1K2.fbThermoCouple1.iRaw, INT, 644712352 (16)
        PRG_PF1K2_WFS.fbPF1K2.fbThermoCouple2.bError, BOOL, 644712584 (8)
        PRG_PF1K2_WFS.fbPF1K2.fbThermoCouple2.bOverrange, BOOL, 644712600 (8)
        PRG_PF1K2_WFS.fbPF1K2.fbThermoCouple2.bUnderrange, BOOL, 644712592 (8)
        PRG_PF1K2_WFS.fbPF1K2.fbThermoCouple2.iRaw, INT, 644712608 (16)
        PRG_PF1K2_WFS.fbPF1K2.fbYStage.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 643891264 (2048)
        PRG_PF1K2_WFS.fbPF1K2.fbYStage.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 643890240 (1024)
        PRG_PF1K2_WFS.fbPF1K2.fbZStage.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 644106112 (2048)
        PRG_PF1K2_WFS.fbPF1K2.fbZStage.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 644105088 (1024)
        PRG_PF1K2_WFS.stSiBP, ST_BeamParams, 644712640 (1696)

.. raw:: html

   </details>
   <br />


PRG_PF2K2_WFS
^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>14 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_PF2K2_WFS.fbPF2K2, FB_WFS, 649104640 (841408)
        PRG_PF2K2_WFS.fbPF2K2.fbThermoCouple1.bError, BOOL, 649945736 (8)
        PRG_PF2K2_WFS.fbPF2K2.fbThermoCouple1.bOverrange, BOOL, 649945752 (8)
        PRG_PF2K2_WFS.fbPF2K2.fbThermoCouple1.bUnderrange, BOOL, 649945744 (8)
        PRG_PF2K2_WFS.fbPF2K2.fbThermoCouple1.iRaw, INT, 649945760 (16)
        PRG_PF2K2_WFS.fbPF2K2.fbThermoCouple2.bError, BOOL, 649945992 (8)
        PRG_PF2K2_WFS.fbPF2K2.fbThermoCouple2.bOverrange, BOOL, 649946008 (8)
        PRG_PF2K2_WFS.fbPF2K2.fbThermoCouple2.bUnderrange, BOOL, 649946000 (8)
        PRG_PF2K2_WFS.fbPF2K2.fbThermoCouple2.iRaw, INT, 649946016 (16)
        PRG_PF2K2_WFS.fbPF2K2.fbYStage.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 649124672 (2048)
        PRG_PF2K2_WFS.fbPF2K2.fbYStage.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 649123648 (1024)
        PRG_PF2K2_WFS.fbPF2K2.fbZStage.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 649339520 (2048)
        PRG_PF2K2_WFS.fbPF2K2.fbZStage.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 649338496 (1024)
        PRG_PF2K2_WFS.stSiBP, ST_BeamParams, 649946048 (1696)

.. raw:: html

   </details>
   <br />


PRG_ST3K2_TERM
^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_ST3K2_TERM.ibPMPS_OK, BOOL, 634640032 (8)
        PRG_ST3K2_TERM.ST3K2, FB_MotionPneumaticActuator, 651142400 (108928)
        PRG_ST3K2_TERM.ST3K2.i_xInsertedLS, BOOL, 651251296 (8)
        PRG_ST3K2_TERM.ST3K2.i_xRetractedLS, BOOL, 651251304 (8)
        PRG_ST3K2_TERM.ST3K2.q_xInsert_DO, BOOL, 651251312 (8)
        PRG_ST3K2_TERM.ST3K2.q_xRetract_DO, BOOL, 651251320 (8)


PRG_TM1K2_ATM
^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_TM1K2_ATM.fbTM1K2, FB_ATM, 642411328 (841152)
        PRG_TM1K2_ATM.fbTM1K2.fbThermoCouple1.bError, BOOL, 643252424 (8)
        PRG_TM1K2_ATM.fbTM1K2.fbThermoCouple1.bOverrange, BOOL, 643252440 (8)
        PRG_TM1K2_ATM.fbTM1K2.fbThermoCouple1.bUnderrange, BOOL, 643252432 (8)
        PRG_TM1K2_ATM.fbTM1K2.fbThermoCouple1.iRaw, INT, 643252448 (16)
        PRG_TM1K2_ATM.fbTM1K2.fbXStage.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 642646208 (2048)
        PRG_TM1K2_ATM.fbTM1K2.fbXStage.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 642645184 (1024)
        PRG_TM1K2_ATM.fbTM1K2.fbYStage.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 642431360 (2048)
        PRG_TM1K2_ATM.fbTM1K2.fbYStage.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 642430336 (1024)


PRG_TM2K2_ATM
^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_TM2K2_ATM.fbTM2K2, FB_ATM, 645908736 (841152)
        PRG_TM2K2_ATM.fbTM2K2.fbThermoCouple1.bError, BOOL, 646749832 (8)
        PRG_TM2K2_ATM.fbTM2K2.fbThermoCouple1.bOverrange, BOOL, 646749848 (8)
        PRG_TM2K2_ATM.fbTM2K2.fbThermoCouple1.bUnderrange, BOOL, 646749840 (8)
        PRG_TM2K2_ATM.fbTM2K2.fbThermoCouple1.iRaw, INT, 646749856 (16)
        PRG_TM2K2_ATM.fbTM2K2.fbXStage.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 646143616 (2048)
        PRG_TM2K2_ATM.fbTM2K2.fbXStage.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 646142592 (1024)
        PRG_TM2K2_ATM.fbTM2K2.fbYStage.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 645928768 (2048)
        PRG_TM2K2_ATM.fbTM2K2.fbYStage.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 645927744 (1024)


ParameterList
^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        ParameterList.cSourceNameSize, UDINT, 4388256 (32)


TC_EVENTS
^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TC_EVENTS.LCLSGeneralEventClass, LCLSGeneralEventClass, 660244992 (960)


TC_EVENT_CLASSES
^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TC_EVENT_CLASSES.LCLSGeneralEventClass, GUID, 660225408 (128)
        TC_EVENT_CLASSES.TcGeneralAdsEventClass, GUID, 660225152 (128)
        TC_EVENT_CLASSES.TcRouterEventClass, GUID, 660225664 (128)
        TC_EVENT_CLASSES.TcRTimeEventClass, GUID, 660225792 (128)
        TC_EVENT_CLASSES.TcSystemEventClass, GUID, 660225536 (128)
        TC_EVENT_CLASSES.Win32EventClass, GUID, 660225280 (128)


TwinCAT_SystemInfoVarList
^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TwinCAT_SystemInfoVarList.__PlcTask, _Implicit_Task_Info, 660211776 (704)
        TwinCAT_SystemInfoVarList._AppInfo, PlcAppSystemInfo, 660208704 (2048)
        TwinCAT_SystemInfoVarList._TaskInfo, PlcTaskSystemInfo, 660210752 (1024)
        TwinCAT_SystemInfoVarList._TaskOid_PlcTask, OTCID, 651393504 (32)
        TwinCAT_SystemInfoVarList._TaskPouOid_PlcTask, OTCID, 651251936 (32)


